--- a/client/src/app/left-menu/post-filter-popup/post-filter-popup.component.html
+++ b/client/src/app/left-menu/post-filter-popup/post-filter-popup.component.html
@@ -2,8 +2,8 @@
 <div mat-dialog-content>
 <form class="example-form" [formGroup]="form">
   <div class="row gx-0">
-    <div class="col-md-12">
-  <mat-form-field appearance="fill">
+    <div class="col-md-12 ">
+  <mat-form-field class="full-width" appearance="fill">
     <mat-label>Enter a date range</mat-label>
     <mat-date-range-input [rangePicker]="picker">
       <input matStartDate formControlName="startDate" placeholder="Start date">
@@ -16,23 +16,14 @@
     </div>
     <div class="col-md-12">
   <mat-form-field  class="full-width">
-    <mat-label>Zip Code</mat-label>
-    <input matInput formControlName="zipCode" pattern="^[0-9]{2}-[0-9]{3}" placeholder="Enter Zip Code Here" value="">
-    <mat-error *ngIf="form.get('zipCode').hasError('pattern')">
-      Enter a valid zip code
-    </mat-error>
-  </mat-form-field>
-    </div>
-    <div class="col-md-12">
-  <mat-form-field  class="full-width">
     <mat-label>City</mat-label>
-    <input matInput formControlName="city" [readonly]="!checkIfZipCodeEnteredAndValid()" placeholder="Enter Post Title Here" value="">
+    <input matInput formControlName="city" placeholder="Enter Post Title Here" value="">
   </mat-form-field>
     </div>
   </div>
 </form>
 </div>
-<div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No Thanks</button>
+<div mat-dialog-actions class="d-flex">
+  <button mat-button (click)="onNoClick()">Cancel</button>
   <button mat-button (click)="onAccept()" cdkFocusInitial>Ok</button>
 </div>
